--- a/monitor.service
+++ b/monitor.service
@@ -1,8 +1,9 @@
 [Unit]Description=Monitor Citizen
 After=syslog.target
 [Service]Type=simple
+User=diego
 WorkingDirectory=/home/diego
-ExecStart=/usr/bin/python /home/diego/monitor/manage.py runserver 0.0.0.0:80
+ExecStart=python3 /home/diego/monitor/manage.py runserver 0.0.0.0:80
 StandardOutput=syslog
 StandardError=syslog
 [Install]WantedBy=multi-user.target
